# Swell

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  Swell_Instructions_Guide.docx  codemeta.json  config.json  mkdocs.yml  pyproject.toml  requirements.merged.txt  run_mac.command  run_windows.cmd  seam_contract.py  shared_menu.py
.claude/: launch.json
.github/workflows/: ci.yml  docs.yml  release_phase2_pr.yml  release_phase3_tag.yml  windows_quick_package.yml
Portable_app refactor/: INTEGRATION_TAKEAWAYS.md  PORTABLE_APP_FOUNDATION_CONCERNS.md  PORTABLE_APP_REFACTOR_CHECKLIST.md
SD id tool/: .gitignore  README.md  analysis_handoff.py  browser_controller.py  config.py  event_catalog_service.py  exporter.py  frame_source_adapter.py  host_models.py  host_project_store.py  main.py  processing_engine.py  project_session_service.py  requirements.txt  run_mac.command  sd_gui.py  signal_analysis.py  stack_reader.py
SD id tool/output/: events_manifest.csv  events_manifest.json
SD id tool/tests/: test_analysis_handoff.py  test_cross_app_vertical_slice.py  test_event_catalog_service.py  test_export_parallel_ordering.py  test_exporter.py  test_frame_source_adapter.py  test_multi_sd_sets.py  test_popup_bounds_normalization.py  test_popup_processing_cache.py  test_popup_processing_equivalence.py  test_popup_processing_jobs.py  test_popup_range_state.py  test_project_session_service.py  test_seam_contract_validators.py  test_signal_analysis.py  test_stack_reader.py  test_timeline_mapping.py
Sd id tool refactor/: SD_TOOL_FOUNDATION_CONCERNS.md  SD_TOOL_REFACTOR_CHECKLIST.md
archive/legacy-integration/: README.md
benchmarks/event_auto_detection/: per_dataset.csv  timings_long.csv  timings_wide.csv
benchmarks/event_auto_detection_smoke/: per_dataset.csv  summary.json
benchmarks/sd_auto_detection/: candidates.csv  summary.json
benchmarks/sd_auto_detection_smoke/: candidates.csv  timings_long.csv  timings_wide.csv
dev_notes/: README.md  analysis_window_tools_ui_plan.md  comment_neutrality_audit.md  github_release_packaging_plan.md  host_analysis_seam_contract_v1.md  ios_dc_trace_integration_report.md  log_message_consistency_audit.md  performance_and_quality_optimization_plan.md  persistence_convergence_decision.md  release_concerns.md  release_runbook.md  specialist_baseline_proposal.md  swell_rename_plan.md  ui_label_title_consistency_audit.md  unified_single_package_architecture.md
docs/: changelog.md  citation.md  developer-guide.md  file-formats.md  github_release_packaging_plan.md  glossary.md  host_analysis_seam_contract_v1.md  index.md  installation.md  ios_dc_trace_integration_report.md  maintenance.md  performance_and_quality_optimization_plan.md  persistence_convergence_decision.md  quickstart.md  release-checklist.md  release_runbook.md  specialist_baseline_proposal.md  troubleshooting.md  ui_label_title_consistency_audit.md  unified_single_package_architecture.md  user-guide.md
docs/gui/: analysis-window.md  host-window.md
docs/javascripts/: mask-edit-demo.js  prompt-demo.js  propagation-demo.js  region-demo.js
docs/stylesheets/: extra.css  prompt-demo.css
docs/user-guide/: 1-first-launch.md  10-export-results.md  2-load-images.md  3-mark-events.md  4-open-analysis.md  5-segment-events.md  6-propagate-masks.md  7-review-overlays.md  8-event-metrics.md  9-save-project.md  index.md
packaging/: compatibility_policy.json  sdapp.spec  swell.spec
portable_app/: .gitignore  README.md  bootstrap_mac.command  bootstrap_win.bat  build_mac_app.command  build_portable.sh  build_win_app.bat  config.json  requirements.txt  run_mac.command  run_win.bat
requirements/: release-py312-constraints.txt
scripts/: benchmark_event_detection.py  benchmark_sd_detection.py
sdapp/: __init__.py  main.py
seam_contract_fixtures/: invalid_handoff_payload_invalid.json  invalid_handoff_raw_false.json  invalid_sync_active_set_stack_mismatch.json  invalid_sync_payload_invalid.json
swell/: __init__.py  main.py
tmp/: win_docker_build.sh
tools/: benchmark_models.py
(+565 files in other folders)
