[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swell"
version = "0.2.0"
description = "Unified multi-window SD identification and analysis application."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "h5py",
  "Pillow",
  "tifffile",
  "imagecodecs",
  "opencv-python",
  "scikit-image",
  "pandas",
  "openpyxl",
  "ttkbootstrap",
  "psutil",
]

[project.optional-dependencies]
model = [
  "torch",
  "hydra-core",
  "sam-2 @ git+https://github.com/facebookresearch/sam2.git@2b90b9f5ceec907a1c18123530e92e794ad901a4",
]
dev = [
  "pytest",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocs-include-markdown-plugin>=6.2",
  "pymdown-extensions>=10.7",
]

[project.scripts]
swell = "swell.main:main"
sdapp = "swell.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["swell*"]

[tool.setuptools.package-data]
swell = ["resources/**/*"]
