[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swell"
version = "0.3.0"
description = "Desktop intrinsic optical signal imaging analysis for spreading depolarization and cortical spreading depression events."
readme = "README.md"
requires-python = ">=3.12"
license = "BSD-3-Clause"
keywords = [
  "intrinsic optical signal imaging",
  "spreading depolarization",
  "cortical spreading depression",
  "spreading depression",
  "neuroscience",
  "optical imaging",
  "image analysis",
  "segmentation",
  "bioimage analysis",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "h5py",
  "Pillow",
  "tifffile",
  "imagecodecs",
  "opencv-python",
  "scikit-image",
  "pandas",
  "openpyxl",
  "ttkbootstrap",
  "psutil",
]

[project.optional-dependencies]
model = [
  "torch",
  "hydra-core",
  "sam-2 @ git+https://github.com/facebookresearch/sam2.git@2b90b9f5ceec907a1c18123530e92e794ad901a4",
]
dev = [
  "pytest",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocs-include-markdown-plugin>=6.2",
  "pymdown-extensions>=10.7",
]

[project.scripts]
swell = "swell.main:main"
# Legacy CLI alias retained for existing SDApp-era launch scripts.
sdapp = "swell.main:main"

[project.urls]
Homepage = "https://github.com/ParrishLab/Swell"
Documentation = "https://parrishlab.github.io/Swell/"
Repository = "https://github.com/ParrishLab/Swell"
Issues = "https://github.com/ParrishLab/Swell/issues"
Changelog = "https://github.com/ParrishLab/Swell/blob/main/CHANGELOG.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["swell*"]

[tool.setuptools.package-data]
swell = ["resources/**/*"]
